trying to fix spacing in about me

--- a/about-me.css
+++ b/about-me.css
@@ -2,7 +2,7 @@
 
 #star {
     position: fixed;
-    margin-left: 500;
+    margin-left: 400;
     /* transform-origin: right top;          not workinnnnnng */
     /* justify-content: right;     not workinnnggg  */
     padding: 1%;
@@ -20,8 +20,8 @@
 
 #mjk {
     padding-top: 23%;
-    /* padding-left: 10%;
-    padding-right: 10%; */
+    padding-left: 2%; 
+    padding-left: 2%;
 
 }
 
